Basic Exercise commit Aug 10, 2020

--- a/Exercises-Data-Lake-Spark/emr-2020-08-09.cfg
+++ b/Exercises-Data-Lake-Spark/emr-2020-08-09.cfg
@@ -13,5 +13,6 @@ EMR_JOB_FLOW_ROLE=EMR_EC2_DefaultRole
 EMR_SERVICE_ROLE=EMR_DefaultRole
 EMR_MASTER_SG=sg-01b1a81ead60b77b0
 EMR_SLAVE_CORE_SG=sg-0bde1eb160ba09e78
+EMR_EC2_SUBNETID=subnet-2fa65a75
 
 
